# overlayed

./: .eslintrc.cjs  .eslintrc.json  .gitignore  .gitmodules  .npmrc  .vercelignore  CONTRIBUTING.md  LOCAL.md  README.md  SECURITY.md  components.json  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.js  tsconfig.json  turbo.json
.github/: labeler.yaml  release-config.yaml
.github/ISSUE_TEMPLATE/: other.md
.github/tooling/: setup.yaml
.github/tooling/setup/: action.yaml
.github/workflows/: build.yaml  canary.yaml  ci.yaml  contributors.yaml  deploy-api.yaml  deploy-bot.yaml  deploy-discord-app.yaml  deploy-updater.yaml  flatpak-build.yaml  new-release.yaml  nightly.yaml  pr-labeler.yaml  release-drafter.yaml  release-signer.yaml  release.yaml  test.yaml  winget-release.yaml
.signpath/policies/overlayed/: test-signing.yml
.thing/hooks/: github-canary-success.config.json  github-canary-success.json  github-stable-success.config.json  github-stable-success.json
apps/api/: README.md  eslint.config.js  package.json  tsconfig.json  wrangler.toml
apps/api/src/: constants.ts  index.ts  types.ts  utils.ts
apps/api/src/handlers/: canary.ts  github.ts  token.ts  updater.ts  webhook.ts
apps/bot/: .prettierrc.mjs  README.md  package.json  wrangler.toml
apps/bot/src/: commands.ts  index.ts  register.ts  types.ts  utils.ts
apps/desktop/: .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc.mjs  README.md  components.json  eslint.config.js  index.html  package.json  sign-mac.sh  sign.sh  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  turbo.json  vite.config.ts
apps/desktop/scripts/: generate-commit-hash.js
apps/desktop/src/: App.tsx  axiom.ts  config.ts  constants.ts  main.tsx  metrics.ts  store.ts  styles.css  token-store.ts  types.ts  use-clickthrough.ts  use-disable-context-menu.ts  use-paths.ts  use-set-size.ts  use-window-resize.ts
apps/desktop/src-tauri/: Cargo.toml  Info.plist  tauri.conf.canary.json  tauri.conf.ci.json  tauri.conf.json  tauri.conf.unsigned.json
apps/desktop/src-tauri/capabilities/: desktop.json
apps/desktop/src-tauri/icons/: README.md  canary.icns  icon.icns  unstable.icns
apps/desktop/src-tauri/icons/canary/: icon.icns
apps/desktop/src-tauri/icons/stable/: icon.icns
apps/desktop/src-tauri/src/: app_handle.rs  app_settings.rs  commands.rs  config.rs  constants.rs  io.rs  main.rs  tray.rs  window_custom.rs
apps/desktop/src/components/: mic-off.tsx  nav-bar.tsx  theme-provider.tsx  update-banner.tsx  updater.tsx  user.tsx
apps/desktop/src/components/icons/: headphones-off.tsx  mic-off.tsx
apps/desktop/src/components/ui/: avatar.tsx  button.tsx  checkbox.tsx  dialog.tsx  input.tsx  label.tsx  link.tsx  simple-select.tsx  slider.tsx  switch.tsx  tabs.tsx  toast.tsx  tooltip.tsx  use-toast.ts
apps/desktop/src/hooks/: use-align.ts  use-align.tsx  use-clickthrough.ts  use-config-value.ts  use-disable-context-menu.ts  use-event-listener.ts  use-intersect.ts  use-keybinds.ts  use-media-query.ts  use-pin.ts  use-platform-info.ts  use-set-size.ts  use-settings.ts  use-theme-sync.ts  use-update.ts  use-window-resize.ts
apps/desktop/src/migrations/: new-app-id.ts
apps/desktop/src/rpc/: command.ts  errors.ts  event.ts  manager.ts
apps/desktop/src/utils/: crypto.ts  migration.ts
apps/desktop/src/views/: channel.tsx  error.tsx  log.tsx  main.tsx  settings.tsx
apps/desktop/src/views/settings/: account.tsx  audit.tsx  configuration.tsx  developer.tsx  index.tsx  join-history.tsx
apps/updater/: .eslintrc.cjs  README.md  package.json  wrangler.toml
apps/updater/src/: index.ts  types.ts  utils.ts
apps/web/: .eslint.json  .eslintignore  .eslintrc.cjs  .gitignore  README.md  astro.config.mjs  astro.config.ts  contributors.ts  eslint.config.js  generate-licenses.js  licences.json  package.json  pnpm-lock.yaml  tailwind.config.mjs  tsconfig.json
apps/web/plugins/: proxy-middleware.mjs  proxy-middleware.ts  target-blank.ts
apps/web/public/: robots.txt  unsupported-discord-overlay-games.txt
apps/web/public/.well-known/: org.flathub.VerifiedApps.txt
apps/web/public/mocks/: latest-canary.json  latest-stable.json  stars.json
apps/web/src/: config.ts  constants.ts  contributors.ts  env.d.ts  routes.ts  time-utils.ts
apps/web/src/__generated__/: licences.json
apps/web/src/components/: card.astro  common-head.astro  contributors.astro  footer.astro  hero.astro  link.astro  logo.astro  navbar.astro  video.astro
apps/web/src/content/: config.ts
apps/web/src/layouts/: Layout.astro
apps/web/src/pages/: 404.astro  [...slug].astro  about.astro  blog.astro  canary.astro  discord-overlay-[slug].astro  discord.astro  index.astro  licenses.astro  quakecon2024.astro  test.astro
apps/web/src/styles/: global.css  prose.css
distribution/: dev.overlayed.Overlayed.desktop  dev.overlayed.Overlayed.metainfo.xml  dev.overlayed.Overlayed.yaml
scripts/: README.md  download-draft-bins.ts  generate-contributors.ts  mac.ts  sign-windows.sh  sign.ts  test.ts  windows.ts
scripts/actions/: create-release.js  download-draft-bins.js  patch-canary-version.js  sign.js  upload-release-artifacts.js  upload-signed-bins.js  upload-to-r2.js
scripts/sandbox/: test.ts
scripts/sign/: constants.ts  index.ts  mac.ts  windows.ts
src/: App.tsx  socket.ts  store.ts  styles.css  types.ts  use-border.ts  use-clickthrough.ts  use-paths.ts  user.tsx  utils.ts
src-tauri/: Cargo.toml  rustc-ice-2023-11-05T17:08:13.132113Z-60370.txt  rustc-ice-2023-11-05T17:10:10.382553Z-60557.txt  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  window_custom.rs
src/components/: headphones-off.tsx  mic-off.tsx  nav-bar.tsx  user.tsx
src/rpc/: command.ts  event.ts  events.ts  manager.ts
src/views/: channel.tsx  error.tsx  main.tsx  settings.tsx
tooling/config-eslint/: next.js  node.js  package.json  tsconfig.json  vite-react.js
tooling/config-eslint/utils/: rules.js
tooling/config-tailwind/: package.json
tooling/config-typescript/: base.json  node.json  vite-react.json
(+43 files in other folders)
