[package]
name = "overlayed"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "notification-all", "global-shortcut-all", "process-relaunch", "updater", "process-exit", "os-all",
  "window-set-position",
  "shell-open",
  "path-all",
  "fs-read-file",
  "fs-exists",
  "fs-write-file",
  "system-tray",
  "window-set-size",
  "window-set-always-on-top",
  "window-start-dragging",
  "macos-private-api",
  "devtools",
  "icon-ico",
  "icon-png",
  "http-all",
] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = [
  "full",
] } # Required for asynchronous operations
tauri-plugin-websocket = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
dark-light = "1.0.0"

# macos dependencies
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
cocoa = "0.25.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
