[package]
name = "overlayed"
version = "0.0.0"
description = "Voice chat overlay for Discord"
authors = ["Team Overlayed"]
license = "AGPL-3.0"
repository = "https://github.com/overlayeddev/overlayed"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
tauri = { version = "1.6.8", features = [
  "window-maximize",
  "window-unmaximize",
  "fs-create-dir",
  "notification-all",
  "global-shortcut-all",
  "process-relaunch",
  "updater",
  "process-exit",
  "os-all",
  "window-set-position",
  "shell-open",
  "path-all",
  "fs-read-file",
  "fs-exists",
  "fs-write-file",
  "system-tray",
  "window-set-size",
  "window-set-always-on-top",
  "window-start-dragging",
  "macos-private-api",
  "devtools",
  "icon-ico",
  "icon-png",
  "http-all",
] }
serde = { version = "1.0.203", features = ["derive"] }
tokio = { version = "1.38.0", features = [
  "full",
] } # Required for asynchronous operations
tauri-plugin-websocket = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-window-state = { git = "https://github.com/Hacksore/plugins-workspace", branch = "v1" }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
anyhow = "1.0.86"

# macos dependencies
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2.7"
cocoa = "0.25.0"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v1" }
system-notification = { git = "https://github.com/ahkohd/tauri-toolkit", branch = "v1" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
